--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,196 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Nunito Sans', sans-serif;
+}
+body {
+  background-color: #fff;
+}
+
 .App {
   text-align: center;
+  max-width: 728px;
+  margin: 0 auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App header {
+  background-color: #3988cb;
+  height: 10vh;
+  min-height: 50px;
+  color: white;
+  position: fixed;
+  width: 100%;
+  max-width: 728px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 99;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App section {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+  background-color: #fff;
+}
+
+main {
+  padding: 10px 0;
+  height: 80vh;
+  margin: 10vh 0 10vh;
+  overflow-y: auto;
+  /* overflow-x: hidden; */
+  display: flex;
+  flex-direction: column;
+}
+
+/* main::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+main::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+main::-webkit-scrollbar-thumb {
+  background: #6649b8;
+} */
+
+form {
+  height: 10vh;
+  position: fixed;
+  bottom: 0;
+  background-color: #3988cb;
+  width: 100%;
+  max-width: 728px;
+  display: flex;
+  font-size: 1.5rem;
+}
+
+form button {
+  width: 20%;
+  background-color: rgb(56, 56, 143);
+}
+
+input {
+  line-height: 1.5;
+  width: 100%;
+  font-size: 1.5rem;
+  background: rgb(58, 58, 58);
   color: white;
+  outline: none;
+  border: none;
+  padding: 0 10px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  background-color: #282c34; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 1.25rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.sign-in {
+  color: #fff;
+  background: #3988cb;
+  max-width: 400px;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+.sign-out {
+  background-color: #3988cb;
+}
+ul,
+li {
+  text-align: left;
+  list-style: none;
+}
+
+p.messageText {
+  max-width: 500px;
+  margin-bottom: 12px;
+  line-height: 24px;
+  padding: 10px 20px;
+  border-radius: 25px;
+  position: relative;
+  color: white;
+  text-align: center;
+  word-wrap: break-word;
+  word-break: break-all;
+  text-align: left;
+}
+
+.message {
+  display: flex;
+  align-items: center;
+}
+
+.sent {
+  flex-direction: row-reverse;
+}
+
+.sent .messageText {
+  color: white;
+  background: #0b93f6;
+  align-self: flex-end;
+}
+.received .messageText {
+  background: #e5e5ea;
+  color: black;
+}
+
+.profilePhoto {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 2px 5px;
+}
+
+.messagePhoto {
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 5px;
+  margin: 0px 5px 12px;
+  object-fit: contain;
+}
+
+.timeStamp {
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+#mediaCapture {
+  display: none;
+}
+
+#submitImage {
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
