--- a/src/App.css
+++ b/src/App.css
@@ -231,10 +231,9 @@ main {
 }
 p.messageText {
   max-width: 500px;
-  margin-bottom: 12px;
   line-height: 24px;
   padding: 10px 20px;
-  border-radius: 25px;
+  border-radius: 5px;
   position: relative;
   color: white;
   text-align: center;
@@ -256,16 +255,48 @@ p.messageText {
   color: white;
   background: #0b93f6;
   align-self: flex-end;
+  right: 5px;
+}
+/* add tail to message box */
+.sent .messageText::after {
+  content: '';
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 20px solid transparent;
+  border-left-color: #0b93f6;
+  border-right: 0;
+  border-bottom: 0;
+  margin-top: -10px;
+  margin-right: -20px;
 }
 .received .messageText {
   background: #e5e5ea;
   color: black;
+  left: 5px;
+}
+
+.received .messageText::after {
+  content: '';
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 20px solid transparent;
+  border-right-color: #e5e5ea;
+  border-left: 0;
+  border-bottom: 0;
+  margin-top: -10px;
+  margin-left: -20px;
 }
 
 .profilePhoto {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  border-radius: 5px;
   margin: 2px 5px;
   cursor: pointer;
 }
