--- a/src/App.css
+++ b/src/App.css
@@ -383,6 +383,45 @@ p.messageText {
   cursor: pointer;
 }
 
+/* message profile photo modal */
+.profile-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9);
+}
+.close-profile-modal {
+  position: absolute;
+  top: -20px;
+  right: 0;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.close-profile-modal:hover,
+.close-profile-modal:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+.profile-photo-container {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  position: relative;
+}
+.big-profile-Photo {
+  width: inherit;
+}
 /* user profile update modal */
 #update-profile-container {
   display: none;
