--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
 .App header {
   background-color: #3988cb;
   height: 10vh;
-  min-height: 50px;
+  min-height: 100px;
   color: white;
   position: fixed;
   width: 100%;
@@ -36,6 +36,28 @@ body {
   box-sizing: border-box;
 }
 
+.weather-container {
+  width: 25%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.weather-container .weather-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.weather-img-wrapper {
+  height: 50px;
+  width: 50px;
+}
+
+.weather-img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .chat-container {
   display: flex;
   flex-direction: column;
@@ -526,6 +548,12 @@ input[type='file'] {
   .App h1,
   .App .chat-btns {
     font-size: 1rem;
+  }
+  .App h2 {
+    font-size: 0.8rem;
+  }
+  .App span {
+    font-size: 0.7rem;
   }
   .chat-btns {
     padding: 5px;
