--- a/src/App.css
+++ b/src/App.css
@@ -541,6 +541,17 @@ input[type='file'] {
   align-items: center;
 }
 
+.app-error-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+  border: 1px solid red;
+  border-radius: 15px;
+  margin-top: 100px;
+  background-color: rgb(252, 157, 157);
+}
 @media only screen and (max-width: 768px) {
   .App header {
     min-width: 320px;
